--- a/client/web-controller/features/bot-controller/camera-pan-tilt/camera-pan-tilt.module.scss
+++ b/client/web-controller/features/bot-controller/camera-pan-tilt/camera-pan-tilt.module.scss
@@ -1,17 +1,20 @@
-.videoContainer {
+.container {
+    position: relative;
     width: 100%;
-    height: 100%;
-    border: 0;
+    height: 100vh;
 }
-.commandBar {
-    padding: 16px;
+.movingPadContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 25vw;
+    height: 20vh;
+    width: 100vw;
+    position: fixed;
+    bottom: 30vh;
+    left: 0;
+}
+.closeButton {
     position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
 }
-.loader {
-    width: 100%;
-    height: 100%;
-    display: flex;
-}
-
